--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.1.0",
+    "react-addons-test-utils": "^15.3.2",
     "webpack": "^1.13.2"
   }
 }
